// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab> renders a tab 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
    <!--TOPNAV-->
    <div class=\\"hig__global-nav__container__sub-nav\\">
    <div class=\\"hig__global-nav__container__sub-nav__left__icon\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left\\">Module Name</div>
    <div class=\\"hig__global-nav__sub-nav__tabs\\">
    <div class=\\"hig__global-nav__sub-nav__tabs__tab\\">Such Tab</div><!--TAB-->
</div><!--TABS-->
    <div class=\\"hig__global-nav__container__sub-nav__left__icon hig__global-nav__container__sub-nav__spacer\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left hig__global-nav__container__sub-nav__spacer\\">Module Name</div>
</div><!--SUBNAV-->
    <!--SLOT-->
</div><!--CONTAINER-->
</div>"
`;

exports[`<Tab> updates props 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
    <!--TOPNAV-->
    <div class=\\"hig__global-nav__container__sub-nav\\">
    <div class=\\"hig__global-nav__container__sub-nav__left__icon\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left\\">Module Name</div>
    <div class=\\"hig__global-nav__sub-nav__tabs\\">
    <div class=\\"hig__global-nav__sub-nav__tabs__tab hig__global-nav__sub-nav__tabs__tab--active\\" title=\\"Many Tab\\">Many Tab</div><!--TAB-->
</div><!--TABS-->
    <div class=\\"hig__global-nav__container__sub-nav__left__icon hig__global-nav__container__sub-nav__spacer\\">#</div>
    <div class=\\"hig__global-nav__container__sub-nav__left hig__global-nav__container__sub-nav__spacer\\">Module Name</div>
</div><!--SUBNAV-->
    <!--SLOT-->
</div><!--CONTAINER-->
</div>"
`;
